[package]
name = "pulsus-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "pulsusdb"
path = "src/main.rs"

[dependencies]
# `ws` (issue #74): the `/api/logs/v1/tail` live-tail WebSocket
# (`axum::extract::ws`) — a feature flag on the existing dependency, not a
# new one.
axum = { workspace = true, features = ["ws"] }
bytes.workspace = true
# RFC3339 timestamp parsing for `/api/logs/v1`'s `start`/`end`/`time` params
# (issue #13 architect plan interfaces: "else RFC3339 (chrono) ⇒ ns"); no
# other timestamp math in this binary needs it (elsewhere "now" is read via
# `std::time::SystemTime`, matching the rest of the workspace).
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
pulsus-clickhouse = { path = "../pulsus-clickhouse" }
pulsus-config = { path = "../pulsus-config" }
pulsus-logql = { path = "../pulsus-logql" }
# M7-A5b-i: `prom_api/encode.rs`'s native-histogram wire encoder walks
# `FloatHistogram::all_buckets` directly (the `MarshalHistogram` port) — a
# real (not dev-only) dependency now, promoted from the dev-only role it
# held before A5b (see the `[dev-dependencies]` note this superseded).
pulsus-model = { path = "../pulsus-model" }
# `prom_api` (issue #32) parses PromQL directly (`pulsus_promql::parse`)
# and reuses `pulsus_promql::plan`'s already-tested `__name__`-extraction
# for `match[]` selectors — mirrors `pulsus-logql`'s own role on the log
# query surface.
pulsus-promql = { path = "../pulsus-promql" }
pulsus-read = { path = "../pulsus-read" }
# `traces_api/search.rs` (issue #57) parses TraceQL (`pulsus_traceql::parse`)
# and hands the AST to `pulsus-read`'s search planner — mirrors
# `pulsus-logql`'s role on the log query surface.
pulsus-traceql = { path = "../pulsus-traceql" }
pulsus-schema = { path = "../pulsus-schema" }
pulsus-write = { path = "../pulsus-write" }
# Issue #43: one-time cloud instance-metadata probe for availability-zone
# auto-detection at startup (`azdetect.rs`). This crate itself needs no TLS —
# it only talks plain HTTP to a link-local endpoint — so it requests reqwest
# with default features off (a whole-workspace build may still resolve a
# TLS-enabled reqwest for another crate, e.g. `pulsus-e2e`; the point here is
# that azdetect does not depend on it). The client disables proxies (a
# configured HTTP proxy must never intercept a link-local metadata call —
# SSRF hardening).
reqwest = { version = "0.12", default-features = false }
# `traces_api` (issue #55) decodes the stored per-span payloads as OTLP
# `TracesData` and encodes the assembled trace as protobuf
# (`prost::Message`) or OTLP-canonical protojson (the crate's `with-serde`
# serializers) — promoted from dev-only (#36's conformance fixtures) to
# real dependencies.
opentelemetry-proto.workspace = true
prost.workspace = true
# Inbound TLS termination on the listener (issue #174, `tls.rs`): rustls
# server config (explicit `ring` provider — see the `builder_with_provider`
# note there), tokio-rustls for the async accept-side handshake, and
# rustls-pemfile for loading `PULSUS_TLS_CERT`/`PULSUS_TLS_KEY`.
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# `#[derive(clickhouse::Row)]` (via `pulsus_clickhouse::Row`) expands
# referencing the `clickhouse` crate name directly, so `tests/
# prom_api_live.rs`'s seed-row structs need it in scope even though
# `pulsus-clickhouse` already re-exports the derive itself — same
# dev-only precedent as `pulsus-read`'s own live tests
# (`clickhouse.workspace = true` there too).
clickhouse.workspace = true
tower = { workspace = true, features = ["util"] }
# gzip-decodes `CompressionLayer` response bodies in the poll-after-end
# regression coverage for issue #24 — dev-only, never a runtime dependency
# (the server itself only ever *encodes* gzip, via tower-http).
flate2.workspace = true
# Issue #36: `tests/api_conformance.rs` snappy-compresses
# `prompb.WriteRequest` bodies for `/api/v1/write` (its OTLP protobuf
# fixtures use the `opentelemetry-proto`/`prost` real dependencies above,
# promoted from dev-only by issue #55's trace-fetch assembly).
snap.workspace = true
# Issue #174: self-signed cert/key generation at test run time for the
# `tls.rs` loader unit tests and `tests/tls_live.rs` — no private key is
# ever committed to this (public) repo, and generated material never
# expires under CI's clock.
rcgen = "0.13"
# `test-util` enables `#[tokio::test(start_paused = true)]` for the issue
# #174 accept-error backoff test in `tls.rs` (the pulsus-write precedent).
tokio = { workspace = true, features = ["test-util"] }
