[package]
name = "pulsus-write"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
flate2.workspace = true
http-body-util.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
pulsus-model = { path = "../pulsus-model" }
serde_json.workspace = true
snap.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
