[package]
name = "pulsus-write"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
clickhouse.workspace = true
flate2.workspace = true
futures.workspace = true
http-body-util.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
pulsus-clickhouse = { path = "../pulsus-clickhouse" }
pulsus-config = { path = "../pulsus-config" }
pulsus-model = { path = "../pulsus-model" }
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "macros", "fs"] }
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
